ghc-4335c07/testsuite/tests/typecheck/should_fail/T6018Afail.hs
{-# LANGUAGE TypeFamilyDependencies #-}

module T6018Afail where

type family G a b c = (result :: *) | result -> a b c
type instance G Int  Char Bool = Bool
type instance G Char Bool Int  = Int
